// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should concat 1`] = `
Object {
  "jane": "doe",
  "john": "doe",
}
`;

exports[`should deep concat 1`] = `
Object {
  "me": Object {
    "john": "doe",
  },
  "wife": Object {
    "jane": "doe",
  },
}
`;

exports[`should deep override 1`] = `
Object {
  "me": Object {
    "john": "doe awesome",
  },
}
`;

exports[`should override 1`] = `
Object {
  "john": "doe awesome",
}
`;

exports[`should return an empty object 1`] = `Object {}`;

exports[`should return objectOne 1`] = `
Object {
  "john": "doe",
}
`;

exports[`should return objectTwo 1`] = `
Object {
  "jane": "doe",
}
`;
